<?xml version="1.0"?>
<package>
  <name>tiffer_panel</name>
  <version>0.1.0</version>
  <description>Displays global tiffer messages in RViz.</description>
  <maintainer email="t.pelode@gmail.com">Tiffer Pelode</maintainer>
  
  <license>GPL-3.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>qtbase5-dev</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
